Use ARC_APPLICATION notifier-type for ARC notifications

Bug: 782005
Change-Id: Icd1888daf9873719bce2b4d37d7d66e31c24da66
Reviewed-on: https://chromium-review.googlesource.com/763031
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515886}
Former-commit-id: 4b9d2273510e1288f543bb6934dde98d5c66ce14